# middleware

./: CMakeLists.txt  build.sh  clean.sh
hoofs/: CMakeLists.txt
hoofs/include/cxx_stl/: string.hpp  string_internal.hpp
hoofs/include/file_read/: file_reader.hpp
hoofs/include/logger/: macros.h  mlog.h  mlog_impl.h
hoofs/include/platform/: CMakeLists.txt
hoofs/include/platform/linux/: fcntl.hpp  file.cpp  file.hpp  fnctl.cpp  grp.cpp  grp.hpp  mman.cpp  mman.hpp  mqueue.cpp  mqueue.hpp  pthread.hpp  semaphore.hpp  socket.cpp  socket.hpp  unistd.cpp  unistd.hpp
hoofs/source/cxx_stl/: string.cpp
hoofs/source/file_read/: file_reader.cpp
hoofs/source/logger/: mlog_impl.cpp
hoofs/source/logger/test/: logger_config.toml  test_log.cpp
hoofs/stl_/: CMakeLists.txt
hoofs/stl_/adaptor/: queue_syj.hpp  stack_syj.hpp
hoofs/stl_/container/: base_tree.hpp  deque_syj.hpp  list_syj.hpp  set_syj.hpp  string.hpp  tree_syj.hpp  vector_syj.hpp
posh/: CMakeLists.txt  SpiConfig.yaml  main.cpp
posh/include/parse/: cmd_line_parse.hpp
posh/source/application/: main.cpp
posh/source/doipserver/: doip_control.cpp  doip_control.h
posh/source/doipserver/doip_common/: DoIpHead.hpp  announcement_timer.hpp  controller_config.h  convert.hpp
posh/source/doipserver/message/: alive_check_request.hpp  alive_check_response.hpp  diag_message.hpp  diag_message_ack.hpp  diag_message_nack.hpp  eid_vehicle_id_request.hpp  entity_status_request.hpp  entity_status_response.hpp  generic_nack.hpp  message.hpp  power_mode_request.hpp  power_mode_response.hpp  routing_activation_request.hpp  routing_activation_response.hpp  vehicle_id_request.hpp  vehicle_id_response.hpp  vin_vehicle_id_request.hpp
posh/source/doipserver/messhandler/: message_handler.hpp  vehicle_id_message_handler.hpp
posh/source/doipserver/server/: DoIPServer.cpp  DoIPServer.h  doip_parse.hpp
posh/source/logger/: mlog_impl.cpp  mlog_impl.h
posh/source/logger/test/: Config.yaml
posh/source/yaml_parse/: doip_config.hpp  spi_config.hpp  yaml_parse.hpp
posh/test/: CMakeLists.txt  main.cpp
